@@ -25,8 +25,8 @@ OutputEvents SelectedEvents
 PerfStats No
 NEvents 0
 
-PRWConfigFiles ttHMultilepton/tthML.PURWTconfig.410009.mc15b.root
-PRWLumiCalcFiles  ttHMultilepton/ilumicalc_histograms_HLT_mu20_iloose_L1MU15_276262-284484.root
+#PRWConfigFiles ttHMultilepton/tthML.PURWTconfig.410009.mc15b.root
+#PRWLumiCalcFiles  ttHMultilepton/ilumicalc_histograms_HLT_mu20_iloose_L1MU15_276262-284484.root
 
 Systematics Nominal
 
